sandbox/Raylib_natchuz/src/src/raylib.h

    typedef enum bool { false = 0, true = !false } bool;
typedef struct Vector2 {
    float x;                
    float y;                
} Vector2;
typedef struct Vector3 {
    float x;                
    float y;                
    float z;                
} Vector3;
typedef struct Matrix {
    float m0, m4, m8, m12;  
    float m1, m5, m9, m13;  
    float m2, m6, m10, m14; 
    float m3, m7, m11, m15; 
} Matrix;
typedef struct Color {
    unsigned char r;        
    unsigned char g;        
    unsigned char b;        
    unsigned char a;        
} Color;
typedef struct Rectangle {
    float x;                
    float y;                
    float width;            
    float height;           
} Rectangle;
typedef struct Image {
    void *data;             
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Image;
typedef struct Texture {
    unsigned int id;        
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Texture;
typedef Texture Texture2D;
typedef struct RenderTexture {
    unsigned int id;        
    Texture texture;        
    Texture depth;          
} RenderTexture;
typedef RenderTexture RenderTexture2D;
typedef struct GlyphInfo {
    int value;              
    int offsetX;            
    int offsetY;            
    int advanceX;           
    Image image;            
} GlyphInfo;
typedef struct Font {
    int baseSize;           
    int glyphCount;         
    int glyphPadding;       
    Texture2D texture;      
    Rectangle *recs;        
    GlyphInfo *glyphs;      
} Font;
typedef struct Camera3D {
    Vector3 position;       
    Vector3 target;         
    Vector3 up;             
    float fovy;             
    int projection;         
} Camera3D;
typedef Camera3D Camera;    
typedef struct Camera2D {
    Vector2 offset;         
    Vector2 target;         
    float rotation;         
    float zoom;             
} Camera2D;
typedef struct Shader {
    unsigned int id;        
    int *locs;              
} Shader;
typedef struct VrDeviceInfo {
    int hResolution;                
    int vResolution;                
    float hScreenSize;              
    float vScreenSize;              
    float vScreenCenter;            
    float eyeToScreenDistance;      
    float lensSeparationDistance;   
    float interpupillaryDistance;   
    float lensDistortionValues[4];  
    float chromaAbCorrection[4];    
} VrDeviceInfo;
typedef struct VrStereoConfig {
    Matrix projection[2];           
    Matrix viewOffset[2];           
    float leftLensCenter[2];        
    float rightLensCenter[2];       
    float leftScreenCenter[2];      
    float rightScreenCenter[2];     
    float scale[2];                 
    float scaleIn[2];               
} VrStereoConfig;
typedef enum {
    LOG_ALL = 0,        
    LOG_TRACE,          
    LOG_DEBUG,          
    LOG_INFO,           
    LOG_WARNING,        
    LOG_ERROR,          
    LOG_FATAL,          
    LOG_NONE            
} TraceLogLevel;
typedef enum {
    SHADER_UNIFORM_FLOAT = 0,       
    SHADER_UNIFORM_VEC2,            
    SHADER_UNIFORM_VEC3,            
    SHADER_UNIFORM_VEC4,            
    SHADER_UNIFORM_INT,             
    SHADER_UNIFORM_IVEC2,           
    SHADER_UNIFORM_IVEC3,           
    SHADER_UNIFORM_IVEC4,           
    SHADER_UNIFORM_SAMPLER2D        
} ShaderUniformDataType;
typedef enum {
    PIXELFORMAT_UNCOMPRESSED_GRAYSCALE = 1, 
    PIXELFORMAT_UNCOMPRESSED_GRAY_ALPHA,    
    PIXELFORMAT_UNCOMPRESSED_R5G6B5,        
    PIXELFORMAT_UNCOMPRESSED_R8G8B8,        
    PIXELFORMAT_UNCOMPRESSED_R5G5B5A1,      
    PIXELFORMAT_UNCOMPRESSED_R4G4B4A4,      
    PIXELFORMAT_UNCOMPRESSED_R8G8B8A8,      
    PIXELFORMAT_UNCOMPRESSED_R32,           
    PIXELFORMAT_UNCOMPRESSED_R32G32B32,     
    PIXELFORMAT_UNCOMPRESSED_R32G32B32A32,  
    PIXELFORMAT_COMPRESSED_DXT1_RGB,        
    PIXELFORMAT_COMPRESSED_DXT1_RGBA,       
    PIXELFORMAT_COMPRESSED_DXT3_RGBA,       
    PIXELFORMAT_COMPRESSED_DXT5_RGBA,       
    PIXELFORMAT_COMPRESSED_ETC1_RGB,        
    PIXELFORMAT_COMPRESSED_ETC2_RGB,        
    PIXELFORMAT_COMPRESSED_ETC2_EAC_RGBA,   
    PIXELFORMAT_COMPRESSED_PVRT_RGB,        
    PIXELFORMAT_COMPRESSED_PVRT_RGBA,       
    PIXELFORMAT_COMPRESSED_ASTC_4x4_RGBA,   
    PIXELFORMAT_COMPRESSED_ASTC_8x8_RGBA    
} PixelFormat;
typedef enum {
    TEXTURE_FILTER_POINT = 0,               
    TEXTURE_FILTER_BILINEAR,                
    TEXTURE_FILTER_TRILINEAR,               
    TEXTURE_FILTER_ANISOTROPIC_4X,          
    TEXTURE_FILTER_ANISOTROPIC_8X,          
    TEXTURE_FILTER_ANISOTROPIC_16X,         
} TextureFilter;
typedef enum {
    TEXTURE_WRAP_REPEAT = 0,                
    TEXTURE_WRAP_CLAMP,                     
    TEXTURE_WRAP_MIRROR_REPEAT,             
    TEXTURE_WRAP_MIRROR_CLAMP               
} TextureWrap;
typedef enum {
    CUBEMAP_LAYOUT_AUTO_DETECT = 0,         
    CUBEMAP_LAYOUT_LINE_VERTICAL,           
    CUBEMAP_LAYOUT_LINE_HORIZONTAL,         
    CUBEMAP_LAYOUT_CROSS_THREE_BY_FOUR,     
    CUBEMAP_LAYOUT_CROSS_FOUR_BY_THREE,     
    CUBEMAP_LAYOUT_PANORAMA                 
} CubemapLayout;
typedef enum {
    FONT_DEFAULT = 0,               
    FONT_BITMAP,                    
    FONT_SDF                        
} FontType;
typedef enum {
    BLEND_ALPHA = 0,                
    BLEND_ADDITIVE,                 
    BLEND_MULTIPLIED,               
    BLEND_ADD_COLORS,               
    BLEND_SUBTRACT_COLORS,          
    BLEND_ALPHA_PREMULTIPLY,        
    BLEND_CUSTOM,                   
    BLEND_CUSTOM_SEPARATE           
} BlendMode;
typedef enum {
    GESTURE_NONE        = 0,        
    GESTURE_TAP         = 1,        
    GESTURE_DOUBLETAP   = 2,        
    GESTURE_HOLD        = 4,        
    GESTURE_DRAG        = 8,        
    GESTURE_SWIPE_RIGHT = 16,       
    GESTURE_SWIPE_LEFT  = 32,       
    GESTURE_SWIPE_UP    = 64,       
    GESTURE_SWIPE_DOWN  = 128,      
    GESTURE_PINCH_IN    = 256,      
    GESTURE_PINCH_OUT   = 512       
} Gesture;
typedef enum {
    CAMERA_CUSTOM = 0,              
    CAMERA_FREE,                    
    CAMERA_ORBITAL,                 
    CAMERA_FIRST_PERSON,            
    CAMERA_THIRD_PERSON             
} CameraMode;
typedef enum {
    CAMERA_PERSPECTIVE = 0,         
    CAMERA_ORTHOGRAPHIC             
} CameraProjection;
typedef enum {
    NPATCH_NINE_PATCH = 0,          
    NPATCH_THREE_PATCH_VERTICAL,    
    NPATCH_THREE_PATCH_HORIZONTAL   
} NPatchLayout;
typedef void (*TraceLogCallback)(int logLevel, const char *text, va_list args);  
typedef unsigned char *(*LoadFileDataCallback)(const char *fileName, unsigned int *bytesRead);      
typedef bool (*SaveFileDataCallback)(const char *fileName, void *data, unsigned int bytesToWrite);  
typedef char *(*LoadFileTextCallback)(const char *fileName);            
typedef bool (*SaveFileTextCallback)(const char *fileName, char *text); 
RLAPI void InitWindow(int width, int height, const char *title);  
RLAPI bool WindowShouldClose(void);                               
RLAPI void altCloseWindow(void);                                  
RLAPI bool IsWindowReady(void);                                   
RLAPI bool IsWindowFullscreen(void);                              
RLAPI bool IsWindowHidden(void);                                  
RLAPI bool IsWindowMinimized(void);                               
RLAPI bool IsWindowMaximized(void);                               
RLAPI bool IsWindowFocused(void);                                 
RLAPI bool IsWindowResized(void);                                 
RLAPI bool IsWindowState(unsigned int flag);                      
RLAPI void SetWindowState(unsigned int flags);                    
RLAPI void ClearWindowState(unsigned int flags);                  
RLAPI void ToggleFullscreen(void);                                
RLAPI void MaximizeWindow(void);                                  
RLAPI void MinimizeWindow(void);                                  
RLAPI void RestoreWindow(void);                                   
RLAPI void SetWindowIcon(Image image);                            
RLAPI void SetWindowIcons(Image *images, int count);              
RLAPI void SetWindowTitle(const char *title);                     
RLAPI void SetWindowPosition(int x, int y);                       
RLAPI void SetWindowMonitor(int monitor);                         
RLAPI void SetWindowMinSize(int width, int height);               
RLAPI void SetWindowSize(int width, int height);                  
RLAPI void SetWindowOpacity(float opacity);                       
RLAPI void *GetWindowHandle(void);                                
RLAPI int GetScreenWidth(void);                                   
RLAPI int GetScreenHeight(void);                                  
RLAPI int GetRenderWidth(void);                                   
RLAPI int GetRenderHeight(void);                                  
RLAPI int GetMonitorCount(void);                                  
RLAPI int GetCurrentMonitor(void);                                
RLAPI Vector2 GetMonitorPosition(int monitor);                    
RLAPI int GetMonitorWidth(int monitor);                           
RLAPI int GetMonitorHeight(int monitor);                          
RLAPI int GetMonitorPhysicalWidth(int monitor);                   
RLAPI int GetMonitorPhysicalHeight(int monitor);                  
RLAPI int GetMonitorRefreshRate(int monitor);                     
RLAPI Vector2 GetWindowPosition(void);                            
RLAPI Vector2 GetWindowScaleDPI(void);                            
RLAPI const char *GetMonitorName(int monitor);                    
RLAPI void SetClipboardText(const char *text);                    
RLAPI const char *GetClipboardText(void);                         
RLAPI void EnableEventWaiting(void);                              
RLAPI void DisableEventWaiting(void);                             
RLAPI void SwapScreenBuffer(void);                                
RLAPI void PollInputEvents(void);                                 
RLAPI void WaitTime(double seconds);                              
RLAPI void altShowCursor(void);                                   
RLAPI void HideCursor(void);                                      
RLAPI bool IsCursorHidden(void);                                  
RLAPI void EnableCursor(void);                                    
RLAPI void DisableCursor(void);                                   
RLAPI bool IsCursorOnScreen(void);                                
RLAPI void ClearBackground(Color color);                          
RLAPI void BeginDrawing(void);                                    
RLAPI void EndDrawing(void);                                      
RLAPI void BeginMode2D(Camera2D camera);                          
RLAPI void EndMode2D(void);                                       
RLAPI void BeginMode3D(Camera3D camera);                          
RLAPI void EndMode3D(void);                                       
RLAPI void BeginTextureMode(RenderTexture2D target);              
RLAPI void EndTextureMode(void);                                  
RLAPI void BeginShaderMode(Shader shader);                        
RLAPI void EndShaderMode(void);                                   
RLAPI void BeginBlendMode(int mode);                              
RLAPI void EndBlendMode(void);                                    
RLAPI void BeginScissorMode(int x, int y, int width, int height); 
RLAPI void EndScissorMode(void);                                  
RLAPI void BeginVrStereoMode(VrStereoConfig config);              
RLAPI void EndVrStereoMode(void);                                 
RLAPI VrStereoConfig LoadVrStereoConfig(VrDeviceInfo device);     
RLAPI void UnloadVrStereoConfig(VrStereoConfig config);           
RLAPI Shader LoadShader(const char *vsFileName, const char *fsFileName);   
RLAPI Shader LoadShaderFromMemory(const char *vsCode, const char *fsCode); 
RLAPI bool IsShaderReady(Shader shader);                                   
RLAPI int GetShaderLocation(Shader shader, const char *uniformName);       
RLAPI int GetShaderLocationAttrib(Shader shader, const char *attribName);  
RLAPI void SetShaderValue(Shader shader, int locIndex, const void *value, int uniformType);               
RLAPI void SetShaderValueV(Shader shader, int locIndex, const void *value, int uniformType, int count);   
RLAPI void SetShaderValueMatrix(Shader shader, int locIndex, Matrix mat);         
RLAPI void SetShaderValueTexture(Shader shader, int locIndex, Texture2D texture); 
RLAPI void UnloadShader(Shader shader);                                    