Raylib/raylib.jai

PIXELFORMAT_UNCOMPRESSED_GRAYSCALE    :: PixelFormat.UNCOMPRESSED_GRAYSCALE;
PIXELFORMAT_UNCOMPRESSED_GRAY_ALPHA   :: PixelFormat.UNCOMPRESSED_GRAY_ALPHA;
PIXELFORMAT_UNCOMPRESSED_R5G6B5       :: PixelFormat.UNCOMPRESSED_R5G6B5;
PIXELFORMAT_UNCOMPRESSED_R8G8B8       :: PixelFormat.UNCOMPRESSED_R8G8B8;
PIXELFORMAT_UNCOMPRESSED_R5G5B5A1     :: PixelFormat.UNCOMPRESSED_R5G5B5A1;
PIXELFORMAT_UNCOMPRESSED_R4G4B4A4     :: PixelFormat.UNCOMPRESSED_R4G4B4A4;
PIXELFORMAT_UNCOMPRESSED_R8G8B8A8     :: PixelFormat.UNCOMPRESSED_R8G8B8A8;
PIXELFORMAT_UNCOMPRESSED_R32          :: PixelFormat.UNCOMPRESSED_R32;
PIXELFORMAT_UNCOMPRESSED_R32G32B32    :: PixelFormat.UNCOMPRESSED_R32G32B32;
PIXELFORMAT_UNCOMPRESSED_R32G32B32A32 :: PixelFormat.UNCOMPRESSED_R32G32B32A32;
PIXELFORMAT_COMPRESSED_DXT1_RGB       :: PixelFormat.COMPRESSED_DXT1_RGB;
PIXELFORMAT_COMPRESSED_DXT1_RGBA      :: PixelFormat.COMPRESSED_DXT1_RGBA;
PIXELFORMAT_COMPRESSED_DXT3_RGBA      :: PixelFormat.COMPRESSED_DXT3_RGBA;
PIXELFORMAT_COMPRESSED_DXT5_RGBA      :: PixelFormat.COMPRESSED_DXT5_RGBA;
PIXELFORMAT_COMPRESSED_ETC1_RGB       :: PixelFormat.COMPRESSED_ETC1_RGB;
PIXELFORMAT_COMPRESSED_ETC2_RGB       :: PixelFormat.COMPRESSED_ETC2_RGB;
PIXELFORMAT_COMPRESSED_ETC2_EAC_RGBA  :: PixelFormat.COMPRESSED_ETC2_EAC_RGBA;
PIXELFORMAT_COMPRESSED_PVRT_RGB       :: PixelFormat.COMPRESSED_PVRT_RGB;
PIXELFORMAT_COMPRESSED_PVRT_RGBA      :: PixelFormat.COMPRESSED_PVRT_RGBA;
PIXELFORMAT_COMPRESSED_ASTC_4x4_RGBA  :: PixelFormat.COMPRESSED_ASTC_4x4_RGBA;
PIXELFORMAT_COMPRESSED_ASTC_8x8_RGBA  :: PixelFormat.COMPRESSED_ASTC_8x8_RGBA;

// Texture parameters: filter mode
// NOTE 1: Filtering considers mipmaps if available in the texture
// NOTE 2: Filter is accordingly set for minification and magnification
TextureFilter :: enum s32 {
	POINT           :: 0;
	BILINEAR        :: 1;
	TRILINEAR       :: 2;
	ANISOTROPIC_4X  :: 3;
	ANISOTROPIC_8X  :: 4;
	ANISOTROPIC_16X :: 5;
}
TEXTURE_FILTER_POINT           :: TextureFilter.POINT;
TEXTURE_FILTER_BILINEAR        :: TextureFilter.BILINEAR;
TEXTURE_FILTER_TRILINEAR       :: TextureFilter.TRILINEAR;
TEXTURE_FILTER_ANISOTROPIC_4X  :: TextureFilter.ANISOTROPIC_4X;
TEXTURE_FILTER_ANISOTROPIC_8X  :: TextureFilter.ANISOTROPIC_8X;
TEXTURE_FILTER_ANISOTROPIC_16X :: TextureFilter.ANISOTROPIC_16X;

// Texture parameters: wrap mode
TextureWrap :: enum s32 {
	REPEAT        :: 0;
	CLAMP         :: 1;
	MIRROR_REPEAT :: 2;
	MIRROR_CLAMP  :: 3;
}
TEXTURE_WRAP_REPEAT        :: TextureWrap.REPEAT;
TEXTURE_WRAP_CLAMP         :: TextureWrap.CLAMP;
TEXTURE_WRAP_MIRROR_REPEAT :: TextureWrap.MIRROR_REPEAT;
TEXTURE_WRAP_MIRROR_CLAMP  :: TextureWrap.MIRROR_CLAMP;

// Cubemap layouts
CubemapLayout :: enum s32 {
	AUTO_DETECT         :: 0;
	LINE_VERTICAL       :: 1;
	LINE_HORIZONTAL     :: 2;
	CROSS_THREE_BY_FOUR :: 3;
	CROSS_FOUR_BY_THREE :: 4;
	PANORAMA            :: 5;
}
CUBEMAP_LAYOUT_AUTO_DETECT         :: CubemapLayout.AUTO_DETECT;
CUBEMAP_LAYOUT_LINE_VERTICAL       :: CubemapLayout.LINE_VERTICAL;
CUBEMAP_LAYOUT_LINE_HORIZONTAL     :: CubemapLayout.LINE_HORIZONTAL;
CUBEMAP_LAYOUT_CROSS_THREE_BY_FOUR :: CubemapLayout.CROSS_THREE_BY_FOUR;
CUBEMAP_LAYOUT_CROSS_FOUR_BY_THREE :: CubemapLayout.CROSS_FOUR_BY_THREE;
CUBEMAP_LAYOUT_PANORAMA            :: CubemapLayout.PANORAMA;

// Font type, defines generation method
FontType :: enum s32 {
	DEFAULT :: 0;
	BITMAP  :: 1;
	SDF     :: 2;
}
FONT_DEFAULT :: FontType.DEFAULT;
FONT_BITMAP  :: FontType.BITMAP;
FONT_SDF     :: FontType.SDF;

// Color blending modes (pre-defined)
BlendMode :: enum s32 {
	ALPHA             :: 0;
	ADDITIVE          :: 1;
	MULTIPLIED        :: 2;
	ADD_COLORS        :: 3;
	SUBTRACT_COLORS   :: 4;
	ALPHA_PREMULTIPLY :: 5;
	CUSTOM            :: 6;
	CUSTOM_SEPARATE   :: 7;
}
BLEND_ALPHA             :: BlendMode.ALPHA;
BLEND_ADDITIVE          :: BlendMode.ADDITIVE;
BLEND_MULTIPLIED        :: BlendMode.MULTIPLIED;
BLEND_ADD_COLORS        :: BlendMode.ADD_COLORS;
BLEND_SUBTRACT_COLORS   :: BlendMode.SUBTRACT_COLORS;
BLEND_ALPHA_PREMULTIPLY :: BlendMode.ALPHA_PREMULTIPLY;
BLEND_CUSTOM            :: BlendMode.CUSTOM;
BLEND_CUSTOM_SEPARATE   :: BlendMode.CUSTOM_SEPARATE;

// Gesture
// NOTE: Provided as bit-wise flags to enable only desired gestures
Gesture :: enum s32 {
	NONE        :: 0;
	TAP         :: 1;
	DOUBLETAP   :: 2;
	HOLD        :: 4;
	DRAG        :: 8;
	SWIPE_RIGHT :: 16;
	SWIPE_LEFT  :: 32;
	SWIPE_UP    :: 64;
	SWIPE_DOWN  :: 128;
	PINCH_IN    :: 256;
	PINCH_OUT   :: 512;
}
GESTURE_NONE        :: Gesture.NONE;
GESTURE_TAP         :: Gesture.TAP;
GESTURE_DOUBLETAP   :: Gesture.DOUBLETAP;
GESTURE_HOLD        :: Gesture.HOLD;
GESTURE_DRAG        :: Gesture.DRAG;
GESTURE_SWIPE_RIGHT :: Gesture.SWIPE_RIGHT;
GESTURE_SWIPE_LEFT  :: Gesture.SWIPE_LEFT;
GESTURE_SWIPE_UP    :: Gesture.SWIPE_UP;
GESTURE_SWIPE_DOWN  :: Gesture.SWIPE_DOWN;
GESTURE_PINCH_IN    :: Gesture.PINCH_IN;
GESTURE_PINCH_OUT   :: Gesture.PINCH_OUT;

// Camera system modes
CameraMode :: enum s32 {
	CUSTOM       :: 0;
	FREE         :: 1;
	ORBITAL      :: 2;
	FIRST_PERSON :: 3;
	THIRD_PERSON :: 4;
}
CAMERA_CUSTOM       :: CameraMode.CUSTOM;
CAMERA_FREE         :: CameraMode.FREE;
CAMERA_ORBITAL      :: CameraMode.ORBITAL;
CAMERA_FIRST_PERSON :: CameraMode.FIRST_PERSON;
CAMERA_THIRD_PERSON :: CameraMode.THIRD_PERSON;

// Camera projection
CameraProjection :: enum u32 {
	PERSPECTIVE  :: 0;
	ORTHOGRAPHIC :: 1;
}
CAMERA_PERSPECTIVE  :: CameraProjection.PERSPECTIVE;
CAMERA_ORTHOGRAPHIC :: CameraProjection.ORTHOGRAPHIC;

// N-patch layout
NPatchLayout :: enum u32 {
	NINE_PATCH             :: 0;
	THREE_PATCH_VERTICAL   :: 1;
	THREE_PATCH_HORIZONTAL :: 2;
}
NPATCH_NINE_PATCH             :: NPatchLayout.NINE_PATCH;
NPATCH_THREE_PATCH_VERTICAL   :: NPatchLayout.THREE_PATCH_VERTICAL;
NPATCH_THREE_PATCH_HORIZONTAL :: NPatchLayout.THREE_PATCH_HORIZONTAL;

// Callbacks to hook some internal functions
// WARNING: These callbacks are intended for advance users
TraceLogCallback :: #type (logLevel: TraceLogLevel, text: *u8, args: va_list) -> void #c_call;
LoadFileDataCallback :: #type (fileName: *u8, bytesRead: *u32) -> *u8 #c_call;
SaveFileDataCallback :: #type (fileName: *u8, data: *void, bytesToWrite: u32) -> bool #c_call;
LoadFileTextCallback :: #type (fileName: *u8) -> *u8 #c_call;
SaveFileTextCallback :: #type (fileName: *u8, text: *u8) -> bool #c_call;

// Window-related functions
InitWindow :: (width: s32, height: s32, title: *u8) -> void #foreign raylib;
WindowShouldClose :: () -> bool #foreign raylib;
CloseWindow :: () -> void #foreign raylib "altCloseWindow";
IsWindowReady :: () -> bool #foreign raylib;
IsWindowFullscreen :: () -> bool #foreign raylib;
IsWindowHidden :: () -> bool #foreign raylib;
IsWindowMinimized :: () -> bool #foreign raylib;
IsWindowMaximized :: () -> bool #foreign raylib;
IsWindowFocused :: () -> bool #foreign raylib;
IsWindowResized :: () -> bool #foreign raylib;
IsWindowState :: (flag: u32) -> bool #foreign raylib;
SetWindowState :: (flags: u32) -> void #foreign raylib;
ClearWindowState :: (flags: u32) -> void #foreign raylib;
ToggleFullscreen :: () -> void #foreign raylib;
MaximizeWindow :: () -> void #foreign raylib;
MinimizeWindow :: () -> void #foreign raylib;
RestoreWindow :: () -> void #foreign raylib;
SetWindowIcon :: (image: Image) -> void #foreign raylib;
SetWindowIcons :: (images: *Image, count: s32) -> void #foreign raylib;
SetWindowTitle :: (title: *u8) -> void #foreign raylib;
SetWindowPosition :: (x: s32, y: s32) -> void #foreign raylib;
SetWindowMonitor :: (monitor: s32) -> void #foreign raylib;
SetWindowMinSize :: (width: s32, height: s32) -> void #foreign raylib;
SetWindowSize :: (width: s32, height: s32) -> void #foreign raylib;
SetWindowOpacity :: (opacity: float) -> void #foreign raylib;
GetWindowHandle :: () -> *void #foreign raylib;
GetScreenWidth :: () -> s32 #foreign raylib;
GetScreenHeight :: () -> s32 #foreign raylib;
GetRenderWidth :: () -> s32 #foreign raylib;
GetRenderHeight :: () -> s32 #foreign raylib;
GetMonitorCount :: () -> s32 #foreign raylib;
GetCurrentMonitor :: () -> s32 #foreign raylib;
GetMonitorPosition :: (monitor: s32) -> Vector2 #foreign raylib;
GetMonitorWidth :: (monitor: s32) -> s32 #foreign raylib;
GetMonitorHeight :: (monitor: s32) -> s32 #foreign raylib;
GetMonitorPhysicalWidth :: (monitor: s32) -> s32 #foreign raylib;
GetMonitorPhysicalHeight :: (monitor: s32) -> s32 #foreign raylib;
GetMonitorRefreshRate :: (monitor: s32) -> s32 #foreign raylib;
GetWindowPosition :: () -> Vector2 #foreign raylib;
GetWindowScaleDPI :: () -> Vector2 #foreign raylib;
GetMonitorName :: (monitor: s32) -> *u8 #foreign raylib;
SetClipboardText :: (text: *u8) -> void #foreign raylib;
GetClipboardText :: () -> *u8 #foreign raylib;
EnableEventWaiting :: () -> void #foreign raylib;
DisableEventWaiting :: () -> void #foreign raylib;

// Custom frame control functions
// NOTE: Those functions are intended for advance users that want full control over the frame processing
// By default EndDrawing() does this job: draws everything + SwapScreenBuffer() + manage frame timing + PollInputEvents()
// To avoid that behaviour and control frame processes manually, enable in config.h: SUPPORT_CUSTOM_FRAME_CONTROL
SwapScreenBuffer :: () -> void #foreign raylib;
PollInputEvents :: () -> void #foreign raylib;
WaitTime :: (seconds: float64) -> void #foreign raylib;

// Cursor-related functions
ShowCursor :: () -> void #foreign raylib "altShowCursor";
HideCursor :: () -> void #foreign raylib;
IsCursorHidden :: () -> bool #foreign raylib;
EnableCursor :: () -> void #foreign raylib;
DisableCursor :: () -> void #foreign raylib;
IsCursorOnScreen :: () -> bool #foreign raylib;

// Drawing-related functions
ClearBackground :: (color: Color) -> void #foreign raylib;
BeginDrawing :: () -> void #foreign raylib;
EndDrawing :: () -> void #foreign raylib;
BeginMode2D :: (camera: Camera2D) -> void #foreign raylib;
EndMode2D :: () -> void #foreign raylib;
BeginMode3D :: (camera: Camera3D) -> void #foreign raylib;
EndMode3D :: () -> void #foreign raylib;
BeginTextureMode :: (target: RenderTexture2D) -> void #foreign raylib;
EndTextureMode :: () -> void #foreign raylib;
BeginShaderMode :: (shader: Shader) -> void #foreign raylib;
EndShaderMode :: () -> void #foreign raylib;
BeginBlendMode :: (mode: s32) -> void #foreign raylib;
EndBlendMode :: () -> void #foreign raylib;
BeginScissorMode :: (x: s32, y: s32, width: s32, height: s32) -> void #foreign raylib;
EndScissorMode :: () -> void #foreign raylib;
BeginVrStereoMode :: (config: VrStereoConfig) -> void #foreign raylib;
EndVrStereoMode :: () -> void #foreign raylib;

// VR stereo config functions for VR simulator
LoadVrStereoConfig :: (device: VrDeviceInfo) -> VrStereoConfig #foreign raylib;
UnloadVrStereoConfig :: (config: VrStereoConfig) -> void #foreign raylib;

// Shader management functions
// NOTE: Shader functionality is not available on OpenGL 1.1
LoadShader :: (vsFileName: *u8, fsFileName: *u8) -> Shader #foreign raylib;
LoadShaderFromMemory :: (vsCode: *u8, fsCode: *u8) -> Shader #foreign raylib;
IsShaderReady :: (shader: Shader) -> bool #foreign raylib;
GetShaderLocation :: (shader: Shader, uniformName: *u8) -> s32 #foreign raylib;
GetShaderLocationAttrib :: (shader: Shader, attribName: *u8) -> s32 #foreign raylib;
SetShaderValue :: (shader: Shader, locIndex: s32, value: *void, uniformType: ShaderUniformDataType) -> void #foreign raylib;
SetShaderValueV :: (shader: Shader, locIndex: s32, value: *void, uniformType: ShaderUniformDataType, count: s32) -> void #foreign raylib;
SetShaderValueMatrix :: (shader: Shader, locIndex: s32, mat: Matrix) -> void #foreign raylib;
SetShaderValueTexture :: (shader: Shader, locIndex: s32, texture: Texture2D) -> void #foreign raylib;
UnloadShader :: (shader: Shader) -> void #foreign raylib;
